# beaker-bunsen

./: .gitignore  DEFINITIONS.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  hatch_build.py  pyproject.toml
.github/workflows/: build-publish.yaml  test.yaml
src/beaker_bunsen/: __about__.py  __init__.py  bunsen_agent.py  bunsen_context.py  corpus.py
src/beaker_bunsen/builder/: bunsen_context.py  bunsen_package.py  hooks.py
src/beaker_bunsen/corpus/: __init__.py  corpus.py  protocols.py  types.py
src/beaker_bunsen/corpus/embedders/: __init__.py  base.py  code.py  document.py  documentation.py  embedder.py  examples.py
src/beaker_bunsen/corpus/loaders/: __init__.py  base.py  code_library_loader.py  local_file_loader.py  schemes.py  skill_loader.py  sqlite_loader.py
src/beaker_bunsen/corpus/resources/: __init__.py  resource.py  splitting.py
src/beaker_bunsen/corpus/util/: helpers.py  logging.py  splitters.py
src/beaker_bunsen/corpus/vector_stores/: __init__.py  base_vector_store.py  chromadb_store.py
src/beaker_bunsen/scripts/: bunsen.py  extract_documentation.py  extract_examples.py
src/beaker_bunsen/skills/: model.py
src/beaker_bunsen/skills/skills/: builtins.py
src/beaker_bunsen/vectordb/: __init__.py  chromadb_store.py  types.py  vector_store.py
src/beaker_bunsen/vectordb/_orig_code/: dynamic_example_selector.py  embed_docs.py  embed_documents.py  embed_functions_classes_2.py  get_jupyter_variables.py  info.py  query_functions.py
src/beaker_bunsen/vectordb/embedders/: __init__.py  base.py  code.py  document.py  documentation.py  documents.py  examples.py
src/beaker_bunsen/vectordb/loaders/: __init__.py  base.py  code_library_loader.py  local_file_loader.py  schemes.py
src/beaker_bunsen/vectordb/util/: helpers.py  splitters.py
tests/: __init__.py  test_base_embedder.py  test_chromadb.py  test_code_loaders.py  test_corpus.py  test_document_embedder.py  test_documentation_embedder.py  test_example_embedder.py  test_example_resource.py  test_local_file_loader.py  test_schemes.py  test_utils.py  test_zipped_chromadb.py
tests/data/corpuses/test-corpus/: config.yaml
tests/data/documents/: Lunar_Sample_Laboratory_Facility.html  mathjax_readme.md  yorkshire.txt  yorkshire.txt.metadata
tests/data/documents/recipes/: .metadata  ham_and_lentil_soup  irish_potato_caserole  tajine_maadnous  winter_risotto  winter_risotto.metadata
tests/data/examples/: example_1  example_1.md  example_2  example_2.md  example_3
tests/data/subproject/: pyproject.toml
tests/data/subproject/examples/: example_3.md
tests/data/subproject/src/test_project/: agent.py  context.py
tests/skills/: test_skilltree.py  test_templating.py
tests/skills/pyrenew/: pyrenew_skills.py  test_llms.py  test_pyrenew.py
