[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-bunsen"
dynamic = ["version"]
description = 'Quickly generate new Beaker contexts for new domains and libraries.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker-kernel~=1.5.1",
  "archytas~=1.1.6",
  "chromadb~=0.4.22",
  "tenacity~=8.2.3",
  "tiktoken~=0.5.2",
  "marko~=2.0.3",
  "hatchling",
  "click~=8.1.7",
]

[project.scripts]
bunsen= "beaker_bunsen.scripts.bunsen:cli"

[project.entry-points.hatch]
bunsen = "beaker_bunsen.builder.hooks"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/unknown/beaker-bunsen#readme"
Issues = "https://github.com/unknown/beaker-bunsen/issues"
Source = "https://github.com/unknown/beaker-bunsen"

[tool.hatch.build]
require-runtime-dependencies = true

[tool.hatch.version]
path = "src/beaker_bunsen/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

 # Used to call hatch_build.py
#  [tool.hatch.build.hooks.custom]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_bunsen tests}"

[tool.coverage.run]
source_pkgs = ["beaker_bunsen", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_bunsen/__about__.py",
]

[tool.coverage.paths]
beaker_bunsen = ["src/beaker_bunsen", "*/beaker-bunsen/src/beaker_bunsen"]
tests = ["tests", "*/beaker-bunsen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
