[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
#requires = ["hatchling", "beaker-bunsen @ file:///home/matt/development/beaker/beaker-bunsen", "pysqlite3-binary"]

[project]
name = "test-project"
version = "0.0.0"
description = ""
requires-python = ">=3.10"
keywords = []
authors = []
classifiers = []

dependencies = [
  "beaker-bunsen @ file:///home/matt/development/beaker/beaker-bunsen",
  "pysqlite3-binary",
  "requests",
]

[tool.hatch.build]
require-runtime-dependencies = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.bunsen]
documentation_path = "documentation"
examples_path = "examples"
python_libraries = [
  "requests",
  "os",
]




# Copies the files created in the custom action
#[tool.hatch.build.targets.wheel.shared-data]
#"context.json" = "share/beaker/contexts/bio.json"
